# KoTH-pandemic

./: CMakeLists.txt  README.md
.github/workflows/: cpp.yml
bots/: basic.cpp
bots/basic/: basic.cpp
src/: controller.h  engine.h  main.cpp  register.h
